crates/linkage-blaze-core/tests/ui_fail/restore_undefined_mark.stderr
error[E0080]: evaluation panicked: restore: no mark found with name (mark must be defined before restore)
 --> tests/ui_fail/restore_undefined_mark.rs:5:43
  |
5 |   const RESTORE_UNDEFINED: Linkage<0, 10> = Linkage::start()
  |  ___________________________________________^
6 | |     .forward(1.0)
7 | |     .restore("never_marked"); // error: no mark found with name
  | |____________________________^ evaluation of `RESTORE_UNDEFINED` failed inside this call
  |
note: inside `Linkage::<0, 10>::restore`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/lib.rs
  |
  |                 panic!("restore: no mark found with name (mark must be defined before restore)")
  |                 -------------------------------------------------------------------------------- in this macro invocation
